--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-87</title>
+    <title>EBS Entry v0-89</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -12,7 +12,8 @@
         .container { max-width: 950px; margin: auto; background: white; padding: 15px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .header-wrap { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
         h3 { margin: 0; font-weight: bold; }
-        .btn-lookup { background: var(--bridge); padding: 4px 8px; font-size: 0.7rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: bold; width: 65px; line-height: 1.1; text-align: center; }
+        .ver-tag { font-weight: normal; font-size: 0.9rem; }
+        .btn-lookup { background: var(--bridge); padding: 4px 8px; font-size: 0.7rem; border-radius: 6px; border: none; color: white; cursor: pointer; font-weight: bold; width: 60px; line-height: 1.1; text-align: center; }
         .grid-top { display: grid; grid-template-columns: 0.8fr 1fr 1.2fr; gap: 10px; }
         .grid-cat { display: grid; grid-template-columns: 1fr 0.4fr 0.3fr; gap: 10px; margin-top: 10px; }
         .grid-acc { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-top: 10px; }
@@ -20,11 +21,16 @@
         .grid-4 { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 8px; margin-top: 10px; }
         label { font-size: 0.7rem; font-weight: 700; display: block; margin-bottom: 2px; }
         input, select, textarea { width: 100%; padding: 8px; border: 1px solid #dcdde1; border-radius: 6px; font-size: 0.85rem; box-sizing: border-box; height: 38px; }
+        textarea { height: auto; }
+        .date-wrap { display: flex; align-items: center; gap: 8px; }
+        #dateBtn { width: 45px; height: 38px; cursor: pointer; background: #fff; border: 1px solid #dcdde1; border-radius: 6px; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; }
+        #colCDisp { font-size: 0.85rem; color: var(--primary); font-weight: 500; }
         .type-display { font-size: 0.85rem; font-weight: bold; color: var(--primary); text-align: center; height: 38px; line-height: 36px; border: 1px solid #dcdde1; border-radius: 6px; background: #f1f2f6; box-sizing: border-box; cursor: default; }
         .total-box { background: #e8f5e9; border: 2px dashed var(--accent); padding: 10px; border-radius: 8px; text-align: center; margin: 15px 0; }
         .total-val { font-size: 1.3rem; font-weight: bold; color: var(--accent); }
         .actions { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; }
-        button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; }
+        button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; transition: 0.2s; height: auto; }
+        button:disabled { background: #bdc3c7 !important; cursor: not-allowed; }
         .btn-save { background: var(--accent); }
         .btn-sync { background: var(--bridge); }
         .btn-clear { background: var(--danger); width: 100%; margin-top: 15px; opacity: 0.6; }
@@ -32,75 +38,187 @@
         .preview-wrap { overflow-x: auto; margin-top: 15px; }
         table { width: 100%; border-collapse: collapse; font-size: 0.58rem; table-layout: fixed; }
         th, td { border: 1px solid #ddd; padding: 4px 2px; text-align: left; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+        th { background: #f2f2f2; font-weight: bold; }
+        .w-grp { width: 35px; } .w-fu { width: 22px; } .w-date { width: 68px; } .w-type { width: 32px; }
         .w-cat, .w-acc { width: 110px; } .w-tiny { width: 15px; text-align: center; }
+        .w-tot { width: 45px; text-align: right; }
+        .txt-center { text-align: center !important; }
     </style>
 </head>
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span style="font-weight:normal; font-size:0.9rem;">(v0-87)</span></h3>
-        <button class="btn-lookup" onclick="initRefresh()">Manual Refresh</button>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-89)</span></h3>
+        <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
     </div>
-    <div id="auth_status">iOS Sync: Idle (Tap Refresh)</div>
+    <div id="auth_status">Bridge Status: Initializing...</div>
     <div class="grid-top">
         <div><label>F/U</label><select id="colB" onchange="handleManualFU()"></select></div>
         <div><label>Grouping</label><select id="colA"></select></div>
-        <div><label>Date</label><input type="date" id="colC" onchange="handleDateChange()"></div>
+        <div><label>Date</label><div class="date-wrap"><button id="dateBtn" onclick="document.getElementById('colC').showPicker()">📅</button><input type="date" id="colC" style="visibility:hidden;width:0;position:absolute;" onchange="handleDateChange()"><div id="colCDisp"></div></div></div>
     </div>
     <div class="grid-cat">
         <div><label>Category</label><select id="colF" required onchange="calcTypeAndAuto()"></select></div>
         <div><label style="text-align:center;">Type</label><div id="workTypeDisplay" class="type-display">--</div></div>
-        <div><label>sort</label><input type="number" id="colG"></div>
+        <div><label>sort</label><input type="number" id="colG" placeholder="0"></div>
     </div>
     <div class="grid-acc">
         <div><label>From</label><select id="colH" required onchange="calcTypeAndAuto()"></select></div>
         <div><label>To</label><select id="colI" required onchange="calcTypeAndAuto()"></select></div>
     </div>
+    <div style="margin-top:10px;"><label>Note</label><textarea id="colK" rows="2"></textarea></div>
     <div class="grid-3">
         <div><label>Frequency</label><select id="colFreq"></select></div>
         <div><label>Status</label><select id="colStatus"></select></div>
         <div><label>Mnth</label><select id="colZ"></select></div>
     </div>
-    <div class="total-box"><div class="total-val">£ <span id="totalDisp">0.00</span></div></div>
+    <div class="grid-4">
+        <div><label>Each</label><input type="number" id="colT" placeholder="0.00" step="0.01" oninput="calc()"></div>
+        <div><label>Currency</label><select id="colX" onchange="calc()"></select></div>
+        <div><label>Fees</label><input type="number" id="colV" placeholder="0.00" step="0.01" oninput="calc()"></div>
+        <div><label>Multiplier</label><input type="number" id="colM" value="1" step="0.01" oninput="calc()"></div>
+    </div>
+    <div class="total-box"><label>Total</label><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
     <div class="actions">
-        <button class="btn-save" onclick="saveRow()">Stage</button>
-        <button class="btn-sync" id="sync_btn" onclick="handleSync()">Sync</button>
+        <button class="btn-save" onclick="saveRow()" style="background:var(--accent);">Stage Transaction</button>
+        <button class="btn-sync" id="sync_btn" onclick="handleSync()" disabled>Send to Sheets</button>
     </div>
     <div class="preview-wrap" id="previewArea"></div>
+    <button id="wipeBtn" class="btn-clear" onclick="clearData()">Wipe Local Data (Requires 2 clicks)</button>
+    <input type="hidden" id="bgTypeE" value="--">
 </div>
 
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    let refs = {}; 
+    const VER = "Excel Budget Sheet input (v0-89)";
+    let AA_LIST = [];
+    let coordinateMap = {};
+    const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
+    let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
 
-    function gapiLoaded() { gapi.load('client', () => { gapi.client.init({ apiKey: 'YOUR_API_KEY' }).then(() => { gapi.client.load('sheets', 'v4'); }); }); }
-    
-    // Step 1: Get References from "lookup refs"
-    async function fetchRefs() {
-        const response = await gapi.client.sheets.spreadsheets.values.get({
-            spreadsheetId: SHEET_ID,
-            range: "'lookup refs'!A2:B20"
+    function colToIndex(col) {
+        let idx = 0; col = col.toUpperCase().replace(/[0-9]/g, '');
+        for(let i=0; i<col.length; i++) { idx = idx * 26 + (col.charCodeAt(i) - 64); }
+        return idx - 1;
+    }
+
+    function gapiLoaded() { gapi.load('client', async () => { await gapi.client.init({ apiKey: 'AIzaSyDvZ1XZw5bZgWSB9zaU7h9Vtn7MhDGFMSM' }); await gapi.client.load('sheets', 'v4'); gapiInited = true; checkReady(); }); }
+    function gisLoaded() { tokenClient = google.accounts.oauth2.initTokenClient({ client_id: '23231735212-jtgur3sn2ndh798ke00pm2a1d5rkd4eu.apps.googleusercontent.com', scope: 'https://www.googleapis.com/auth/spreadsheets', callback: '' }); gsiInited = true; checkReady(); }
+    function checkReady() { if (gapiInited && gsiInited) { document.getElementById('auth_status').innerText = "Bridge Status: Active and Ready"; document.getElementById('sync_btn').disabled = false; initRefresh(true); } }
+
+    function initRefresh(silent = false) {
+        tokenClient.callback = async (resp) => { if (resp.access_token) fetchLookupRefs(silent); };
+        tokenClient.requestAccessToken();
+    }
+
+    async function fetchLookupRefs(silent) {
+        try {
+            const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' });
+            const rows = res.result.values;
+            rows.forEach(r => { 
+                coordinateMap[r[0]] = { 
+                    val: colToIndex(r[1]), 
+                    desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null 
+                }; 
+            });
+            fetchActualData(silent);
+        } catch (e) { alert("Ref Error."); }
+    }
+
+    async function fetchActualData(silent) {
+        try {
+            const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'Lookups!A2:AC1000' });
+            const data = res.result.values;
+            const pop = (id, key, def, prompt = null) => {
+                const list = data.filter(r => r[coordinateMap[key].val]).map(r => {
+                    const v = r[coordinateMap[key].val];
+                    const d = coordinateMap[key].desc !== null ? r[coordinateMap[key].desc] : null;
+                    return d ? `${v} - ${d}` : v;
+                });
+                updateDropdown(id, list, def, prompt);
+            };
+            pop('colA', 'Grouping', 'Roy');
+            pop('colB', 'F/U', 'v');
+            pop('colF', 'Category', null, '--Select--');
+            pop('colH', 'From', null, '--Select--');
+            pop('colI', 'To', null, '--Select--');
+            pop('colFreq', 'Frequency', 'A');
+            pop('colStatus', 'Status', 'N');
+            pop('colZ', 'Month', 'NEW');
+            pop('colX', 'Currency', 'GBP');
+
+            AA_LIST = data.filter(r => r[coordinateMap['From'].val]).map(r => r[coordinateMap['From'].val]);
+            calc(); if(!silent) alert("Lookups Refreshed!");
+        } catch (e) { alert("Data Error."); }
+    }
+
+    function updateDropdown(id, vals, defCode, prompt) {
+        const sel = document.getElementById(id);
+        let html = prompt ? `<option value="" disabled selected>${prompt}</option>` : '';
+        html += vals.map(v => `<option value="${v}">${v}</option>`).join('');
+        sel.innerHTML = html;
+        if(defCode) {
+            const opt = Array.from(sel.options).find(o => o.value.startsWith(defCode));
+            if(opt) sel.value = opt.value; else if(vals.length > 0) sel.selectedIndex = prompt ? 1 : 0;
+        }
+    }
+
+    function calcTypeAndAuto() {
+        const h = document.getElementById('colH').value, i = document.getElementById('colI').value, fFull = document.getElementById('colF').value;
+        const fu = document.getElementById('colB'), typeDisp = document.getElementById('workTypeDisplay'), freq = document.getElementById('colFreq'), bgE = document.getElementById('bgTypeE');
+        if (!h || !i || h.includes("--") || i.includes("--")) { typeDisp.innerText = "--"; bgE.value = "--"; return; }
+        const fAA = AA_LIST.includes(h), tAA = AA_LIST.includes(i);
+        let valE = "zOut"; if (fAA && tAA) valE = "xfer"; else if (!fAA && tAA) valE = "In";
+        typeDisp.innerText = valE; bgE.value = valE;
+        if (valE === "xfer") { 
+            const xf = Array.from(fu.options).find(o => o.value.startsWith('xf')); if(xf) fu.value = xf.value;
+            const k = Array.from(freq.options).find(o => o.value.startsWith('K')); if(k) freq.value = k.value;
+            document.getElementById('colF').value = "Transfer"; 
+        } else if (fFull.toLowerCase().includes("support")) {
+            const s = Array.from(fu.options).find(o => o.value.startsWith('S')); if(s) fu.value = s.value;
+        }
+    }
+
+    function handleManualFU() { if(document.getElementById('colB').value.startsWith('xf')) document.getElementById('colF').value = "Transfer"; }
+    function handleDateChange() {
+        const dStr = document.getElementById('colC').value; if(!dStr) return;
+        const [y, m, d] = dStr.split('-').map(Number); const dt = new Date(y, m-1, d);
+        document.getElementById('colCDisp').innerText = `${['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][dt.getDay()]} ${dt.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]} '${String(dt.getFullYear()).substr(-2)}`;
+    }
+    window.onload = () => { document.getElementById('colC').value = new Date().toISOString().split('T')[0]; handleDateChange(); gapiLoaded(); gisLoaded(); };
+    function calc() {
+        const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0;
+        const tot = ((t * u) + v).toFixed(2);
+        const curValue = document.getElementById('colX').value; const curCode = curValue ? curValue.split(' - ')[0] : 'GBP';
+        document.getElementById('symbol').innerText = symbols[curCode]||"£";
+        document.getElementById('totalDisp').innerText = tot; return tot;
+    }
+    function saveRow() {
+        if (!document.getElementById('colF').value || !document.getElementById('colH').value || !document.getElementById('colI').value) return alert("Required fields missing.");
+        const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value.split(' - ')[0], document.getElementById('colG').value, document.getElementById('colH').value, document.getElementById('colI').value, "", document.getElementById('colK').value, document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value||0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value||0).toFixed(2), calc(), document.getElementById('colX').value.split(' - ')[0], "", document.getElementById('colZ').value, VER];
+        let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
+        ['colT', 'colV', 'colK', 'colG'].forEach(id => document.getElementById(id).value = ""); renderPreview();
+    }
+    function renderPreview() {
+        const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
+        let h = '<table><tr><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-date">Date</th><th class="w-type">Type</th><th class="w-cat">Category</th><th class="w-sort">s</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-tiny">N</th><th class="w-tiny">F</th><th class="w-tiny">S</th><th class="txt-center" style="width:25px;">Cur</th><th class="w-tot">Total</th><th class="txt-center" style="width:35px;">Mnth</th><th class="w-tiny">X</th></tr>';
+        data.forEach((r, idx) => {
+            const [y, m, d] = r[2].split('-').map(Number); const dt = new Date(y, m-1, d);
+            h += `<tr><td>${r[0]}</td><td>${r[1]}</td><td>${dt.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]}</td><td>${r[4]}</td><td>${r[5]}</td><td class="txt-center">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny">${r[10]?"✓":""}</td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td class="txt-center">${r[23]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td class="w-tiny"><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 3px;">X</button></td></tr>`;
         });
-        response.result.values.forEach(row => { refs[row[0]] = row[1]; });
-        return fetchActualValues();
+        document.getElementById('previewArea').innerHTML = h + '</table>';
     }
-
-    // Step 2: Fetch actual data based on those refs
-    async function fetchActualValues() {
-        // This function now uses refs['Mnth'] etc. to build ranges
-        // Implementation logic to map 'Z2' to index 25
-        document.getElementById('auth_status').innerText = "Sync Complete";
+    function deleteRow(i) { let d = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); d.splice(i, 1); localStorage.setItem('ebs_trf', JSON.stringify(d)); renderPreview(); }
+    async function handleSync() {
+        const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (!data.length) return;
+        tokenClient.callback = async (resp) => {
+            const vals = data.map(r => { let rc = [...r]; const [y, m, d] = rc[2].split('-').map(Number); rc[2] = `${d.toString().padStart(2,'0')}/${m.toString().padStart(2,'0')}/${y}`; [19, 21, 22].forEach(i => rc[i] = parseFloat(rc[i] || 0)); return rc.slice(0, 27); });
+            try { await gapi.client.sheets.spreadsheets.values.append({ spreadsheetId: SHEET_ID, range: 'EBSinput', valueInputOption: 'USER_ENTERED', resource: { values: vals } }); alert("Success!"); renderPreview(); } catch (e) { alert("Sync Error."); }
+        };
+        tokenClient.requestAccessToken();
     }
-
-    function initRefresh() {
-        tokenClient.callback = async (resp) => { if (resp.access_token) fetchRefs(); };
-        tokenClient.requestAccessToken({ prompt: 'none' }); // Attempt silent refresh first
-    }
-
-    // Logic for internal transfers (xf, Transfer, K) preserved
-    function calcTypeAndAuto() { /* Transfer logic here */ }
-    
-    window.onload = () => { gapiLoaded(); };
+    function clearData() { if(!wipeConfirmed) { wipeConfirmed=true; document.getElementById('wipeBtn').classList.add('active'); setTimeout(()=>{wipeConfirmed=false; document.getElementById('wipeBtn').classList.remove('active');},3000); } else { localStorage.removeItem('ebs_trf'); wipeConfirmed=false; renderPreview(); } }
+    renderPreview();
 </script>
 </body>
 </html>
