--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-91</title>
+    <title>EBS Entry v0-92</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -22,16 +22,12 @@
         label { font-size: 0.7rem; font-weight: 700; display: block; margin-bottom: 2px; }
         input, select, textarea { width: 100%; padding: 8px; border: 1px solid #dcdde1; border-radius: 6px; font-size: 0.85rem; box-sizing: border-box; height: 38px; }
         textarea { height: auto; }
-        .date-wrap { display: flex; align-items: center; gap: 8px; }
-        #dateBtn { width: 45px; height: 38px; cursor: pointer; background: #fff; border: 1px solid #dcdde1; border-radius: 6px; font-size: 1.2rem; display: flex; align-items: center; justify-content: center; }
-        #colCDisp { font-size: 0.85rem; color: var(--primary); font-weight: 500; }
         .type-display { font-size: 0.85rem; font-weight: bold; color: var(--primary); text-align: center; height: 38px; line-height: 36px; border: 1px solid #dcdde1; border-radius: 6px; background: #f1f2f6; box-sizing: border-box; cursor: default; }
         .total-box { background: #e8f5e9; border: 2px dashed var(--accent); padding: 10px; border-radius: 8px; text-align: center; margin: 15px 0; }
         .total-val { font-size: 1.3rem; font-weight: bold; color: var(--accent); }
         .actions { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; }
         button { padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer; color: white; transition: 0.2s; height: auto; }
         button:disabled { background: #bdc3c7 !important; cursor: not-allowed; }
-        .btn-save { background: var(--accent); }
         .btn-sync { background: var(--bridge); }
         .btn-clear { background: var(--danger); width: 100%; margin-top: 15px; opacity: 0.6; }
         #auth_status { font-size: 0.65rem; margin-top: 5px; text-align: center; color: #7f8c8d; }
@@ -49,14 +45,14 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-91)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-92)</span></h3>
         <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
     </div>
     <div id="auth_status">Bridge Status: Initializing...</div>
     <div class="grid-top">
         <div><label>F/U</label><select id="colB" onchange="handleManualFU()"></select></div>
         <div><label>Grouping</label><select id="colA"></select></div>
-        <div><label>Date</label><div class="date-wrap"><button id="dateBtn" onclick="document.getElementById('colC').showPicker()">📅</button><input type="date" id="colC" style="visibility:hidden;width:0;position:absolute;" onchange="handleDateChange()"><div id="colCDisp"></div></div></div>
+        <div><label>Date</label><div class="date-wrap"><button onclick="document.getElementById('colC').showPicker()" style="height:38px; border:1px solid #ddd; border-radius:6px; background:#fff; width:40px;">📅</button><input type="date" id="colC" style="visibility:hidden; width:0; position:absolute;" onchange="handleDateChange()"><span id="colCDisp" style="font-size:0.8rem; margin-left:5px;"></span></div></div>
     </div>
     <div class="grid-cat">
         <div><label>Category</label><select id="colF" required onchange="calcTypeAndAuto()"></select></div>
@@ -81,7 +77,7 @@
     </div>
     <div class="total-box"><label>Total</label><div class="total-val"><span id="symbol">£</span> <span id="totalDisp">0.00</span></div></div>
     <div class="actions">
-        <button class="btn-save" onclick="saveRow()" style="background:var(--accent);">Stage Transaction</button>
+        <button class="btn-save" id="btn_stage" onclick="saveRow()" style="background:var(--accent);">Stage Transaction</button>
         <button class="btn-sync" id="sync_btn" onclick="handleSync()" disabled>Send to Sheets</button>
     </div>
     <div class="preview-wrap" id="previewArea"></div>
@@ -90,6 +86,7 @@
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
+    const VER = "Excel Budget Sheet input (v0-92)";
     let AA_LIST = [], coordinateMap = {};
     const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
@@ -114,7 +111,7 @@
             const res = await gapi.client.sheets.spreadsheets.values.get({ spreadsheetId: SHEET_ID, range: 'LookupRefs!A2:C15' });
             res.result.values.forEach(r => { coordinateMap[r[0]] = { val: colToIndex(r[1]), desc: (r[2] && r[2].toLowerCase() !== 'n/a') ? colToIndex(r[2]) : null }; });
             fetchActualData(silent);
-        } catch (e) { alert("Ref Error."); }
+        } catch (e) { console.error(e); }
     }
 
     async function fetchActualData(silent) {
@@ -132,8 +129,9 @@
             pop('colH', 'From', null, '--Select--'); pop('colI', 'To', null, '--Select--');
             pop('colFreq', 'Frequency', 'A'); pop('colStatus', 'Status', 'N'); pop('colZ', 'Month', 'NEW'); pop('colX', 'Currency', 'GBP');
             AA_LIST = data.filter(r => r[coordinateMap['From'].val]).map(r => r[coordinateMap['From'].val]);
-            calc(); if(!silent) alert("Lookups Refreshed!");
-        } catch (e) { alert("Data Error."); }
+            document.getElementById('colM').value = "1"; calc();
+            if(!silent) alert("Lookups Refreshed!");
+        } catch (e) { console.error(e); }
     }
 
     function handleAccTrigger() {
@@ -171,24 +169,27 @@
     function calc() {
         const t = parseFloat(document.getElementById('colT').value)||0, u = parseFloat(document.getElementById('colM').value)||1, v = parseFloat(document.getElementById('colV').value)||0;
         const tot = ((t * u) + v).toFixed(2);
-        const curCode = document.getElementById('colX').value.split(' - ')[0] || 'GBP';
+        const curValue = document.getElementById('colX').value; const curCode = curValue ? curValue.split(' - ')[0] : 'GBP';
         document.getElementById('symbol').innerText = symbols[curCode]||"£";
         document.getElementById('totalDisp').innerText = tot; return tot;
     }
 
     function saveRow() {
-        if (!document.getElementById('colF').value || !document.getElementById('colH').value || !document.getElementById('colI').value) return alert("Missing required fields.");
-        const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value.split(' - ')[0], document.getElementById('colG').value, document.getElementById('colH').value, document.getElementById('colI').value, "", document.getElementById('colK').value, document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value||0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value||0).toFixed(2), calc(), document.getElementById('colX').value.split(' - ')[0], "", document.getElementById('colZ').value, VER];
-        let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
-        renderPreview();
+        const fv = document.getElementById('colF').value, hv = document.getElementById('colH').value, iv = document.getElementById('colI').value;
+        if (!fv || !hv || !iv) { alert("Category and Accounts required."); return; }
+        try {
+            const row = [document.getElementById('colA').value, document.getElementById('colB').value.split(' - ')[0], document.getElementById('colC').value, "", document.getElementById('bgTypeE').value, document.getElementById('colF').value.split(' - ')[0], document.getElementById('colG').value, document.getElementById('colH').value, document.getElementById('colI').value, "", "", document.getElementById('colFreq').value.split(' - ')[0], "", "", document.getElementById('colStatus').value.split(' - ')[0], "", "", "", "", parseFloat(document.getElementById('colT').value||0).toFixed(2), document.getElementById('colM').value, parseFloat(document.getElementById('colV').value||0).toFixed(2), calc(), document.getElementById('colX').value.split(' - ')[0], "", document.getElementById('colZ').value, VER];
+            let data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); data.push(row); localStorage.setItem('ebs_trf', JSON.stringify(data));
+            renderPreview();
+        } catch(e) { console.error("Stage Error:", e); }
     }
 
     function renderPreview() {
         const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]');
         let h = '<table><tr><th class="w-grp">Grp</th><th class="w-fu">F/U</th><th class="w-date">Date</th><th class="w-type">Type</th><th class="w-cat">Category</th><th class="w-sort">s</th><th class="w-acc">From</th><th class="w-acc">To</th><th class="w-tiny">N</th><th class="w-tiny">F</th><th class="w-tiny">S</th><th class="txt-center" style="width:25px;">Cur</th><th class="w-tot">Total</th><th class="txt-center" style="width:35px;">Mnth</th><th class="w-tiny">X</th></tr>';
         data.forEach((r, idx) => {
-            const [y, m, d] = r[2].split('-').map(Number); const dt = new Date(y, m-1, d);
-            h += `<tr><td>${r[0]}</td><td>${r[1]}</td><td>${dt.getDate()} ${['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][dt.getMonth()]}</td><td>${r[4]}</td><td>${r[5]}</td><td class="w-sort">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny"></td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td class="txt-center">${r[23]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td class="w-tiny"><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 3px;">X</button></td></tr>`;
+            const dParts = r[2].split('-'); const day = dParts[2], mon = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'][parseInt(dParts[1])-1];
+            h += `<tr><td>${r[0]}</td><td>${r[1]}</td><td>${day} ${mon}</td><td>${r[4]}</td><td>${r[5]}</td><td class="w-sort">${r[6]}</td><td>${r[7]}</td><td>${r[8]}</td><td class="w-tiny"></td><td class="w-tiny">${r[11]}</td><td class="w-tiny">${r[14]}</td><td class="txt-center">${r[23]}</td><td class="w-tot">${r[22]}</td><td class="txt-center">${r[25]}</td><td class="w-tiny"><button onclick="deleteRow(${idx})" style="background:red;border:none;color:white;cursor:pointer;padding:0 3px;">X</button></td></tr>`;
         });
         document.getElementById('previewArea').innerHTML = h + '</table>';
     }
@@ -197,14 +198,13 @@
     async function handleSync() {
         const data = JSON.parse(localStorage.getItem('ebs_trf') || '[]'); if (!data.length) return;
         tokenClient.callback = async (resp) => {
-            const vals = data.map(r => { let rc = [...r]; const [y, m, d] = rc[2].split('-').map(Number); rc[2] = `${d.toString().padStart(2,'0')}/${m.toString().padStart(2,'0')}/${y}`; [19, 21, 22].forEach(i => rc[i] = parseFloat(rc[i] || 0)); return rc.slice(0, 27); });
+            const vals = data.map(r => { let rc = [...r]; const dP = rc[2].split('-'); rc[2] = `${dP[2]}/${dP[1]}/${dP[0]}`; [19, 21, 22].forEach(i => rc[i] = parseFloat(rc[i] || 0)); return rc.slice(0, 27); });
             try { await gapi.client.sheets.spreadsheets.values.append({ spreadsheetId: SHEET_ID, range: 'EBSinput', valueInputOption: 'USER_ENTERED', resource: { values: vals } }); alert("Success!"); renderPreview(); } catch (e) { alert("Sync Error."); }
         };
         tokenClient.requestAccessToken();
     }
     function clearData() { if(!wipeConfirmed) { wipeConfirmed=true; document.getElementById('wipeBtn').classList.add('active'); setTimeout(()=>{wipeConfirmed=false; document.getElementById('wipeBtn').classList.remove('active');},3000); } else { localStorage.removeItem('ebs_trf'); wipeConfirmed=false; renderPreview(); } }
-    window.onload = () => { document.getElementById('colC').value = new Date().toISOString().split('T')[0]; handleDateChange(); gapiLoaded(); gisLoaded(); };
-    renderPreview();
+    window.onload = () => { document.getElementById('colC').value = new Date().toISOString().split('T')[0]; handleDateChange(); gapiLoaded(); gisLoaded(); renderPreview(); };
 </script>
 </body>
 </html>
