--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>EBS Entry v0-96</title>
+    <title>EBS Entry v0-97</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <style>
@@ -46,7 +46,7 @@
 <body>
 <div class="container">
     <div class="header-wrap">
-        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-96)</span></h3>
+        <h3>Excel Budget Sheet input <span class="ver-tag">(v0-97)</span></h3>
         <button class="btn-lookup" onclick="initRefresh()">Refresh<br>Lookups</button>
     </div>
     <div id="auth_status">Bridge Status: Initializing...</div>
@@ -87,7 +87,7 @@
 </div>
 <script>
     const SHEET_ID = '1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E';
-    const VER = "Excel Budget Sheet input (v0-96)";
+    const VER = "Excel Budget Sheet input (v0-97)";
     let AA_LIST = [], coordinateMap = {};
     const symbols = { "GBP": "£", "EUR": "€", "USD": "$", "ZAR": "R", "CHF": "Fr", "THB": "฿", "RUR": "₽", "COP": "COL$" };
     let tokenClient, gapiInited = false, gsiInited = false, wipeConfirmed = false;
@@ -131,6 +131,7 @@
             pop('colFreq', 'Frequency', 'A'); pop('colStatus', 'Status', 'N'); pop('colZ', 'Month', 'NEW'); pop('colX', 'Currency', 'GBP');
             AA_LIST = data.filter(r => r[coordinateMap['From'].val]).map(r => r[coordinateMap['From'].val]);
             
+            // Initialization Fix v0-97
             ['colT', 'colV', 'colG', 'colK'].forEach(id => document.getElementById(id).value = "");
             document.getElementById('colM').value = "1";
             document.getElementById('workTypeDisplay').innerText = "--";
@@ -149,16 +150,15 @@
         
         typeDisp.innerText = valE; bgE.value = valE;
 
-        // V0-96 STRICT ACCOUNT PROTECTION: Only set if transfer is positive
+        // PROTECTED TRIGGER v0-97: Only overwrite fields if it is a positive transfer
         if (valE === "xfer") { 
             const xf = Array.from(fu.options).find(o => o.value.startsWith('xf')); if(xf) fu.value = xf.value;
             const k = Array.from(freq.options).find(o => o.value.startsWith('K')); if(k) freq.value = k.value;
             cat.value = "Transfer"; 
         } else {
-            // Re-validate Support priority if transfer logic is false
+            // Re-assert Category rules if transfer is false to prevent "xf" leak
             if (cat.value.toLowerCase().includes("support")) {
-                const s = Array.from(fu.options).find(o => o.value.startsWith('S')); 
-                if(s) fu.value = s.value;
+                const s = Array.from(fu.options).find(o => o.value.startsWith('S')); if(s) fu.value = s.value;
             }
         }
     }
@@ -166,8 +166,7 @@
     function handleCatTrigger() {
         const f = document.getElementById('colF').value, fu = document.getElementById('colB');
         if (f.toLowerCase().includes("support")) { 
-            const s = Array.from(fu.options).find(o => o.value.startsWith('S')); 
-            if(s) fu.value = s.value; 
+            const s = Array.from(fu.options).find(o => o.value.startsWith('S')); if(s) fu.value = s.value; 
         }
     }
 
